# dense

./: README.md
examples/: CMakeLists.txt  mnist.cpp
include/: dense.h
include/utils/: activations.h  losses.h  utils.h
src/: dense.cpp
src/utils/: activations.cpp  losses.cpp  utils.cpp
tests/: CMakeLists.txt  common_utils.cpp  common_utils.h  test_activations.cpp  test_all.cpp  test_dense.cpp  test_losses.cpp
